# UAV-VesselDetect

./: README.md
spirecv-ros/: .gitignore  README.md
spirecv-ros/sv-rosapp/: CMakeLists.txt
spirecv-ros/sv-rosapp/algorithm_params/: sv_algorithm_params_suav.json
spirecv-ros/sv-rosapp/include/: Interpreter.hpp
spirecv-ros/sv-rosapp/launch/: autofocus_vehicle_detection.launch  common_object_detection.launch  mbzirc_suav_vessel_detection.launch  mbzirc_tuav_object_detection.launch  mbzirc_usv_vessel_detection.launch  saving_image_with_airborne_info.launch  single_object_tracking.launch  start_suav_everything.launch
spirecv-ros/sv-rosapp/samples/: autofocus_object_detection.cpp  autofocus_vehicle_detection.cpp  common_object_detection.cpp  mbzirc_suav_vessel_detection.cpp  mbzirc_tuav_object_detection.cpp  mbzirc_usv_vessel_detection.cpp  rtsp2topic.cpp  saving_image_with_airborne_info.cpp  single_object_tracking.cpp
